@@ -1,3 +1,8 @@
+Mon Sep  5 18:10:56 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* transcode.c (rb_econv_binmode): newline decorators are
+	  exclusive.
+
 Mon Sep  5 15:03:37 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* test/rubygems/test_gem_security.rb
